# mcpiot

./: .gitignore  CMakeLists.txt  ESP32S3_MCPIOT_REFERENCE.md  _peripheral_test.py  _wifi_test.py  generate.py  mcpiot_repl.py  probe_device.py  project.json  sdkconfig.defaults  sdkconfig.old
components/mcpiot/: CMakeLists.txt  mcpiot.c  mcpiot_registry.c  mcpiot_rpc.c
components/mcpiot/boards/esp32/: mcpiot_hal.c  mcpiot_transport.c  mcpiot_transport_ble.c  mcpiot_transport_wifi.c
components/mcpiot/boards/stm32/: mcpiot_hal.c  mcpiot_transport.c
components/mcpiot/core/: mcpiot.c  mcpiot_event.c  mcpiot_rpc.c
components/mcpiot/include/: mcpiot.h  mcpiot_event.h  mcpiot_hal.h  mcpiot_module.h  mcpiot_registry.h  mcpiot_rpc.h  mcpiot_transport.h
components/mcpiot_modules/: CMakeLists.txt  gpio_module.c  pwm_module.c  sensor_module.c
components/mcpiot_modules/include/: pwm_module.h  sensor_module.h
components/modules/: CMakeLists.txt  registry.json
components/modules/chip/esp32s3/: adc_module.c  adc_module.h  gpio_module.h  i2c_module.c  i2c_module.h  wifi_module.c  wifi_module.h
main/: CMakeLists.txt  main.c
